# DP_RAG

./: .gitignore  ARCHITECTURE.md  DEV_PLAN.md  README.md  UI_STYLE.md  local_api_config.yaml  package-lock.json  requirements.txt  run_api.py
backend/: Dockerfile  local_api_config.yaml  pyproject.toml  run_api.py  run_api.sh
backend/pipeline/: .dockerignore  __init__.py  __main__.py  config.py  default_config.yaml  models.py  pipeline.py  preflight.py  requirements.txt  run.py  skills-lock.json
backend/pipeline/api/: __init__.py  app.py  authz.py  deps.py  models.py  session_logger.py  sessions.py  tasks.py
backend/pipeline/auth/: __init__.py  logto.py
backend/pipeline/clients/: client_registry.py  embedding.py  milvus.py  mineru.py  object_store.py  query_format.py  redis.py  reranker.py  uniparser.py
backend/pipeline/db/: __init__.py  base.py  models.py  repo.py  schema.py
backend/pipeline/deploy/: README.md  docker-compose.yml
backend/pipeline/flows/: __init__.py  ingest.py  query.py
backend/pipeline/processors/: __init__.py  chunker.py  semantic_splitter.py  uniparser_chunker.py  vectorizer.py
backend/pipeline/prompts/: reflect_system.md
backend/ragas_eval/: config.yaml  evaluate.py  generate_dataset.py  requirements.txt
backend/synthetic_qa_gen/: chunk_resolve.py  config.py  corpus_index.py  test_dataset.json  test_dataset.progress.json  test_dataset_0525.progress.json  test_dataset_2.progress.json  test_dataset_all.json  test_dataset_all.progress.json  test_dataset_corpus33.json  test_dataset_corpus33.progress.json
deploy/: .env.example  (+3 more)
(+295 files in other folders)
